Project EliteGame {
  database_type: 'PostgreSQL'
  note: '''
  # EliteGame BE
  '''
}

Enum user_status {
  ACTIVATED
  DISABLED
  ARCHIVED
  VERIFY_PHONE
  VERIFY_EMAIL
}

Table users [note: 'user table'] {
  id int [pk, increment]
  first_name varchar [note: 'first name']
  last_name varchar [note: 'last name']
  user_name varchar [unique, note: 'userid']
  email varchar
  phone varchar
  password varchar  
  birthday date
  coupon int
  asset_id int
  status user_status
  role_id int [not null, note: 'role id']
  checkin_count int
  first_login "jsonb" [note: 'user locations by ip address']
  created_at timestamp [default: `now()`]
  updated_at timestamp 
}

Ref: users.id < user_locations.user_id

Enum role_short_code {
  GUEST
  CUSTOMER
  TABLET
  ADMIN
  SUPER
}

Table roles [note: 'user role table'] {
  id int [pk, increment]
  name varchar
  short_code role_short_code
  created_at timestamp [default: `now()`]
  updated_at timestamp 
}

Ref: roles.id < users.role_id

Enum asset_type {
  IMAGE
  PDF
  VIDEO
}

Table assets [note: 'Application assets'] {
  id int [pk, increment]
  name varchar
  desc varchar
  url varchar
  type asset_type
  created_at timestamp [default: `now()`]
  updated_at timestamp 
}

Ref: assets.id < users.asset_id

Enum verification_type {
  VERIFY_EMAIL
  VERIFY_PHONE
  INVITATION
  FORGOT_PASSWORD
}

Enum verification_status {
  ACTIVATED
  EXPIRED
  VERIFIED
  COMPLETED
}

Table verifications [note: 'User verification'] {
  id int [pk, increment]
  victim_id int [note: 'action model id => user, invitation']
  type verification_type
  token varchar
  status verification_status
  created_at timestamp [default: `now()`]
  updated_at timestamp 
}

Table email_templates [note: 'email tempalte list'] {
  id int [pk, increment]
  name varchar  
  categroy varchar
  template_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp 
}

Enum location_status {
  OPEN
  CLOSED
}

Enum location_type {
  PALM
  ROULETTE
}

Table locations [note: 'location table'] {
  id int [pk, increment]
  name varchar
  coords jsonb [note: 'lng, lat']
  status location_status
  address "jsonb" [note: 'country, city, state, zipcode, address1, address2']
  type location_type
  description varchar
  created_at timestamp [default: `now()`]
  updated_at timestamp 
}

Ref: locations.id < user_locations.location_id

Table user_locations [note: 'user and location table'] {
  id int [pk, increment]
  user_id int
  location_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp 
}

Enum gallery_model {
  PRODUCT
  LOCATION
}

Table gallery [note: 'assets gallery table'] {
  id int [pk, increment]
  asset_id int
  victim_id int
  model gallery_model
  created_at timestamp [default: `now()`]
  updated_at timestamp 
}

Ref: assets.id < gallery.asset_id

Table points [note: 'points table'] {
  id int [pk, increment]
  user_location_id int
  point int
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Ref: user_locations.id < points.user_location_id

Enum product_status {
  AVAILABLE
  DISABLED
  OUTOFSTOCK
}

Table products [note: 'products table'] {
  id int [pk, increment]
  name varchar  
  amount int
  point int
  status product_status
  short varchar
  description varchar
  created_at timestamp [default: `now()`]
  updated_at timestamp
}


Enum activity_type {  
  CHECKIN
  SIGNUP
  LOGIN
  GET
  VIEW
  CREATE
  UPDATE    
  DELETE
}

Enum activity_model {
  ASSET  
  GALLERY
  LOCATION
  POINT
  PRODUCT
  ROLE
  USE_LOCATION
  USER
  VERIFICATION
  EMAIL_TEMPLATE
  REWARD  
}

Table activities [note: "activity table"] {
  id int [pk, increment]
  user_id int 
  victim_id int
  model activity_model
  type activity_type 
  metadata jsonb  
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Ref: users.id < activities.user_id

Table configs [note: "config table"] {
  id int [pk, increment]
  daily int 
  weekly int 
  monthly int   
  initial_coupon int
  created_at timestamp [default: `now()`]
  updated_at timestamp 
}


Table tablets [note: "tablet table"] {
  id int [pk, increment]
  name varchar 
  password varchar   
  location_id int
  status user_status
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Ref: locations.id < tablets.location_id

Enum transaction_status {
  WAITING
  ACCEPTED
  DECLINED
}
Enum transaction_type {
  POINT
  COUPON  
}

Table transactions [note: "transactions table"] {
  id int [pk, increment]
  user_id int
  reword_id int   
  location_id int
  assignee_id int
  point_id int
  status transaction_status
  type transaction_type
  amount float
  accepted_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Ref: locations.id < transactions.location_id
Ref: users.id < transactions.user_id
Ref: users.id < transactions.assignee_id
Ref: points.id < transactions.point_id

Table rewards [note: "rewards table"] {
  id int [pk, increment]    
  location_id int
  product_id int
  point int
  coupon int
  point_threshold int
  coupon_threshold int
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Ref: locations.id < rewards.location_id
Ref: products.id < rewards.product_id

Enum campaign_type {
  BIRTHDAY
  APPRECIATION
  REFERRAL
  REWARDS
  WELCOME 
  NEWSLETTER
}

Enum offer_type{
  COUPON
  POINT
}

Enum campaign_model{
  AUTO_PILOT
  ON_DEMAND
  INFORMATIONAL
}

Table campaigns [note: "campaigns table"] {
  id int [pk, increment]    
  name varchar
  type campaign_type
  model campaign_model
  offer int
  offer_type offer_type
  total int
  redeemed int
  start_date timestamp
  end_date timestamp
  next_delivery timestamp
  status int [note: "0: disabled, 1: enabled"]
  channels int [note:"1: email, 2: phone, 3: email and phone"]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Enum back_offices_type{
  FREE
  MATCH  
}

Table back_offices [note: "backOffices table"] {
  id int [pk, increment]    
  coupon int [note: "coupon for checkin. freePlay or MatchPlay"]  
  checkin_threshold int
  days int
  type back_offices_type [note: "FREE or MATCH"]
  expiration_date timestamp
  code varchar
  status int [note: "0: inactive, 1: active"]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}